...
import { useProfile } from "../context/ProfileContext";
import { useAuth } from "../hooks/useAuth";
import { Avatar } from "../components/Common";
import { typography } from "../constants/typography";

export type MainTabParamList = {
  Timer: undefined;
  Stats: undefined;
  History: undefined;
  Settings: undefined;
  Profile: undefined;
};

const Tab = createBottomTabNavigator<MainTabParamList>();

export const MainNavigator: React.FC = () => {
...
